# MyApps

./: README.md
C++/C++ The Basics/Search File/: build.bat  main.cpp
C++/C++ The Basics/Search File/0.1/: main.cpp
C++/C++ The Basics/Search File/files/: privkey.pem
C++/C++ The Basics/basic_calculator/: basic_calculator.cpp
C++/C++ The Basics/demo_terminal/v0.1/: CMakeLists.txt  build.bat  main.cpp
C++/C++ The Basics/demo_terminal/v0.2/: CMakeLists.txt  build.bat  main.cpp
C++/C++ The Basics/dice_rolling/: dice_rolling.cpp
C++/C++ The Basics/groceries/: groceries.cpp
C++/C++ The Basics/number_guessing/: number_guessing.cpp
C++/C++ The Basics/pass_generator/: pass_generator.cpp
C++/Python in Cpp/First_Demo/: my_lib.cpp
C++/Python in Cpp/testing/libraries_cpp/: main.cpp  my_lib.h
C++/Python in Cpp/testing/v0.1/: main.cpp  math.cpp  math.h
C++/Python in Cpp/testing/v1.1/: main.cpp
C++/Python in Cpp/testing/v1.2/: main.cpp
C++/Python in Cpp/testing/v1.3/: main.cpp
C++/Python in Cpp/v1.0/: main.cpp
C++/Python in Cpp/v1.1/: script.py
C++/Python in Cpp/v1.2/: script.py
C++/Python in Cpp/v1.3/: main.cpp
Go/: README.rst
Go/Go Encrypt/: ciphertext.txt  main.go
Go/GoGuess/: go.mod  main.go
Go/GoGuess/Ascii-Art-Generator/: README.md
Go/Modbus TCP/go_plc/: go.mod  main.go
Go/Modbus TCP/go_servo/: go.mod  main.go
Go/Password/: go.mod  main.go
Go/SQLite/: go.mod  main.go
Go/SQLite/database/: database.db
MQTT App/Codigo Fuente/: AppMQTT.py
MQTT App/Codigo Fuente/Dependencias/: ID_Cliente.txt
PyTranslate/: Información.txt
(+14 files in other folders)
